Release 1.0 -Enhanced Progress class -Added to IFactoryDrawableType.DrawableProgress drawProgress method with Progress as argument instead of percentage -Removed methods addTanks and addProgresses from IFactoryStorage and IFactoryProcessableStorage -Changed ICraftyEnergyStorage.EnergyTransaction static class to CraftyTransaction -and much more minor changes...